infra/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: riddle-shield
  template:
    metadata: 
      labels:
        app: riddle-shield
    spec:
      containers:
        - name: riddle-shield
          image: samsagas/riddle-shield
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: riddle-shield
  ports:
    - name: riddle-shield
      protocol: TCP
      port: 3030
      targetPort: 3030
