infra/k8s/trivium-nexus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivium-nexus-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: trivium-nexus
  template:
    metadata: 
      labels:
        app: trivium-nexus
    spec:
      containers:
        - name: trivium-nexus
          image: samsagas/trivium-nexus
---
apiVersion: v1
kind: Service
metadata:
  name: trivium-nexus-service
spec:
  selector:
    app: trivium-nexus
  ports:
    - name: trivium-nexus
      protocol: TCP
      port: 3001
      targetPort: 3001
